--- a/src/components/Aside.css
+++ b/src/components/Aside.css
@@ -54,7 +54,7 @@
 .cartTitle .title{
     width: 50%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     /* background-color: hotpink; */
     font-size: 18px;
     margin: 0px;
