--- a/src/components/Aside.css
+++ b/src/components/Aside.css
@@ -25,13 +25,19 @@
     font-size: 12px;
     margin-top: 5px;
     color:rgba(206, 206, 206, 1);
-;
 }
+
 .listCart{
     width: 100%;
     /* border: 1px solid red; */
+    /* background-color: aquamarine; */
     display: flex;
     padding: 10px;
+}
+
+.cartHeader{
+    /* background-color: red; */
+    width: 20%;
 }
 
 .cartImage img{
@@ -43,28 +49,33 @@
     object-fit: cover;
 }
 .cartBody{
-    padding-left: 10px;
-
+    width: 80%;
+    /* padding-left: 10px; */
+    /* background-color: royalblue; */
 }
 .cartTitle {
     width: 100%;
     display: flex;
+    /* background-color: salmon; */
     /* border: 1px solid red; */
 }
 .cartTitle .title{
-    width: 50%;
+    width: 70%;
     display: flex;
     justify-content: flex-start;
     /* background-color: hotpink; */
-    font-size: 18px;
+    font-size: 15px;
     margin: 0px;
     font-weight: 600;
 }
 .cartTitle .cancel{
-    width: 50%;
+    width: 30%;
     /* background-color: hotpink; */
-    
+    /* text-align: center; */
+    font-size: 20px;
+    margin-right: 15%;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
 }
 .cartTitle .cancel button{
@@ -73,7 +84,7 @@
 .cartPriceQty{
     /* border: 1px solid red; */
     display: flex;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 .cartQty{
     display: flex;
@@ -85,8 +96,8 @@
 }
 .cartQty button{
     cursor: pointer;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border: none;
     background-color: rgba(129, 222, 58, 0.24);
 }
@@ -111,6 +122,7 @@
     bottom: 0;
     right: 0;
     width: 35%;
+    background-color: white;
     /* border: 1px solid red; */
 }
 .totalAll{
@@ -268,4 +280,25 @@
 }
 .email{
     background-color: rgba(242, 79, 138, 1);
+}
+.buttonRemove button{
+    background-color: rgba(242, 79, 138, 1);
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 2px;
+}
+
+.txtColor{
+    color: rgba(242, 79, 138, 1);
+    cursor: pointer;
+}
+.qtyNumber{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    font-weight: 800;
 }
