--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -88,6 +88,7 @@ td{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-height: 100vh;
     width: 65%;
     background-color: #BEC3CA4D;
 }
